# SimpleATM

./: .clang-format  CMakeLists.txt  README.md  account.cpp  account.h  bank.cpp  bank.h  main.cpp  unit_test_account.cpp  unit_test_bank.cpp
